# Reels

./: .gitignore  README.md  app.py  info.json  pyproject.toml  reels_transcript.py
reels/: reels_module.py
service/: translate.py
